# JniDemos

./: README.md  settings.gradle
cmake-type/: build.gradle
cmake-type/src/androidTest/java/com/jack/jnidemo/: ExampleInstrumentedTest.java
cmake-type/src/main/: AndroidManifest.xml
cmake-type/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
cmake-type/src/main/java/com/jack/jnidemo/: MainActivity.java
cmake-type/src/main/res/layout/: activity_main.xml
cmake-type/src/test/java/com/jack/jnidemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mk-gradle-type/: build.gradle
mk-gradle-type/src/androidTest/java/com/jack/gradle/: ExampleInstrumentedTest.java
mk-gradle-type/src/main/: AndroidManifest.xml
mk-gradle-type/src/main/java/com/jack/gradle/: MainActivity.java
mk-gradle-type/src/main/jni/: hi_jni.cpp
mk-gradle-type/src/main/res/layout/: activity_main.xml
mk-gradle-type/src/main/res/values/: strings.xml
mk-gradle-type/src/test/java/com/jack/gradle/: ExampleUnitTest.java
mk-type/: build.gradle
mk-type/src/androidTest/java/com/jack/ndk/: ExampleInstrumentedTest.java
mk-type/src/main/: AndroidManifest.xml
mk-type/src/main/java/com/jack/ndk/: MainActivity.java
mk-type/src/main/jni/: Android.mk  Application.mk  hi_jni.cpp
mk-type/src/main/res/layout/: activity_main.xml
mk-type/src/main/res/values/: strings.xml
mk-type/src/test/java/com/jack/ndk/: ExampleUnitTest.java
